--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -2,41 +2,31 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#user-block     {position: fixed;
-                top: 65px;
-                float: left;
-                width: 200px;
-                -webkit-box-sizing: border-box;
-                -moz-box-sizing: border-box;
-                box-sizing: border-box;
-                border: solid 1px #aaaaaa;
-                padding : 30px}
+#right-tweet-form   {top: 65px;
+                    float: right;
+                    width: 200px;
+                    -webkit-box-sizing: border-box;
+                    -moz-box-sizing: border-box;
+                    box-sizing: border-box;
+                    margin-left: auto;
+                    margin-right: auto}
 
-#user-head      {border-bottom: solid 1px #aaaaaa;
-                padding-bottom: 5px;
-                margin-bottom: 5px}
+#right-tweet-form-fixed {position: fixed;
+                        top: 65px;
+                        width: 200px;
+                        -webkit-box-sizing: border-box;
+                        -moz-box-sizing: border-box;
+                        box-sizing: border-box;
+                        border: solid 1px #aaaaaa;
+                        padding : 30px}
 
-#tweet-block    {potision: relative;
-                float: right;
-                width: 570px;
-                -webkit-box-sizing: border-box;
-                -moz-box-sizing: border-box;
-                box-sizing: border-box}
-
-#new-tweet-form {background-color: #ffffff;
-                z-index: 2;
-                position: fixed;
-                top: 36px;
-                width: 570px;
-                height: 100px;
-                -webkit-box-sizing: border-box;
-                -moz-box-sizing: border-box;
-                box-sizing: border-box;
-                border-bottom: solid 1px #aaaaaa;
-                padding: 30px}
-
-#old-tweet-block    {position: relative;
-                    top: 100px}
+#left-tweet-block    {position: absolute;
+                    top: 20px;
+                    float: left;
+                    width: 570px;
+                    -webkit-box-sizing: border-box;
+                    -moz-box-sizing: border-box;
+                    box-sizing: border-box;}
 
 .tweet-content  {margin :2px;
                 border: solid 1px #aaaaaa;
