--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,7 @@ header      {width: 800px;
             z-index: 2;
             position: fixed;
             top: 0px;
+            height: 30px;
             padding: 5px}
 
 #head-top   {border-bottom: solid 1px #aaaaaa}
